# EyeOfIshap

./: .gitignore  .gitmodules  AlgebraOfProgramming.md  AlgorithmW.hs  Backlog.md  BasicExpr.hs  BuildNotes.md  CommonPlace.md  CompilerHistory.md  DOET.md  ErwigGraphNotes.hs  EssenceOfCompilingWithContinuations.md  IntroToDeductiveDatabaseSystems.md  KasrielTopologyNotes.md  LambdaCubeUnboxed.md  LanguageRelatedProjects.md  LogicRefs.md  MartelliMontanari.md  NOTES_slpj1987.md  README.md  SKISchool.lhs  STLC_NOTES.lhs  Sequencers.md  TODO.md  ThinkingAsComputation.md  TreeExample.tex  Turner79.hs  TurnerNotes.md  compilingToCategories_notes.lhs  debruijn.hs  disagreementPairs.hs  krr.md  minCaml.md  mmAlg1.hs
ArrowExample/: ArrowExample.cabal  Main.hs
CS486/: .gitignore  Makefile  Prop.cabal  README.md  Smullyan95_FirstOrderLogic.djvu  SmullyanFirstOrderLogic.md  hw1.ps  proposition.hs
CS486/src/: Kasriel.hs  Prop.hs
CS486/src/Prop/: Lexer.x  Makefile  Parser.y  Syntax.hs
EDSL/: NOTES.md  contramapExample.hs
HVM_Investigation/: NOTES.md
HaskellExamples/: viewPatternExample.hs
HuttonsRazor/: BasicRazor.hs  LamRazor.hs  PythonLamRazor.hs
Industry/: Observability.md
LLUI/: Expr.hs
LogicProgramming/: DatalogAndRecursiveQueryProcessing.md  OnFastLargeScaleProgramAnalysisInDatalog.md
ModularMonadicSemantics/: Gayo99notes.lhs
ModularSemantics/: Gayo99notes.lhs
NOTES/: AlgorithmW.lhs  BirdDebruijn.hs  CCC.md  CHCorespondence.lhs  Cata.hs  ComonadsForUIS.md  DiscriminationIsWrongKmett.md  ErwigGraphNotes.hs  EssenceAndOriginsFRP.md  FRP.md  Feldspar.md  (+13 more)
(+15 files in other folders)
