cabal-version:      2.4
name:               Prop
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Takumi Crary
maintainer:         tcrary@gmail.com

extra-source-files:
    src/Prop/Makefile

-- A copyright notice.
-- copyright:
-- category:
library
    exposed-modules:
        Prop,
        Prop.Lexer,
        Prop.Parser,
        Prop.Syntax,
        Kasriel
    build-depends:    base ^>=4.13.0.0
                     ,array >= 0.5.4.0
                     ,mtl   >= 2.2.2
                     ,containers >= 0.6.5.1
    hs-source-dirs:   src
    default-language: Haskell2010
